<resources>
    <string name="app_name">SharePark</string>
    <string name="title_activity_find_parking">SharePark</string>
    <string name="textview"></string>
    <string name="find_address">Menú</string>
    <string name="parking_request">Solicitar Estacionamiento</string>
    <string name="parking_request_title">Solicitar Estacionamiento</string>
    <string name="button3_text">Volver</string>
    <string name="button4_text">Realizar Solicitud</string>
    <string name="textview6_text">Dirección Estacionamiento: </string>
    <string name="textview5_text">Nombre del Dueño: </string>
    <string name="parking_request_title_text">Solicitar Estacionamiento</string>
    <string name="button6_text">Enviar Solicitud</string>
    <string name="textview7_text">Estacionamiento Cubierto: </string>
    <string name="textview8_text">Tipo de Propiedad: </string>
    <string name="textview9_text">Está Disponible: </string>
    <string name="textview10_text">Costo por Minuto en Pesos: </string>
    <string name="textview11_text">Estrato: </string>
    <string name="registra_tus_datos">Registra tus Datos:</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="direccion">Direccion</string>
    <string name="telefono">Telefono</string>
    <string name="cedula">Cedula</string>
    <string name="nombre">Nombre</string>
    <string name="registrar">Registrar</string>
    <string name="agregar_metodo_de_pago_ahora">Agregar Metodo de Pago Ahora</string>
    <string name="register_activity">register_user</string>
    <string name="registra_tu_estacionamiento">Registra tu Estacionamiento</string>
    <string name="registra_tu_vehiculo">Registra tu Vehiculo</string>
    <string name="volver">Volver</string>
    <string name="servicios_en_curso">Servicios en Curso</string>
    <string name="find_me">¿Donde Estoy?</string>
    <string name="tipo_de_veh_culo">Tipo de Vehículo</string>
    <string name="guardar">Guardar</string>
    <string name="color">Color</string>
    <string name="modelo">Modelo</string>
    <string name="marca">Marca</string>
    <string name="placa">Placa</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="eres_nuevo_crea_tu_cuenta">¿Eres nuevo? Crea tu Cuenta!</string>
    <string name="sharpark">SharPark</string>
    <string name="sharepark">SharePark</string>
    <string name="direcci_n">Dirección</string>
    <string name="cu_l_es_el_tipo_de_tu_propiedad">¿Cuál es el tipo de tu propiedad?</string>
    <string name="tu_parqueadero_es_cubierto">¿Tu parqueadero es cubierto?</string>
    <string name="las_dimensiones_de_tu_estacionamiento">Las dimensiones de tu Estacionamiento</string>
    <string name="alto_metros">Alto (Metros)</string>
    <string name="ancho_metros">Ancho (Metros)</string>
    <string name="largo_metros">Largo (Metros)</string>
    <string name="costo_por_minuto_cop">Costo por minuto (COP$)</string>
    <string name="estrato">Estrato</string>
    <string name="no_olvides">No olvides</string>
    <string name="estacionamiento">de tu estacionamiento!</string>
    <string name="la_direccion">la dirección</string>
    <string name="cos_minute">el costo por minuto</string>
    <string name="the_stratum">el estrato</string>
    <string name="the_he">el alto</string>
    <string name="the_wi">el ancho</string>
    <string name="the_le">el largo</string>
    <string name="stratum_error">Tu estrato es incorrecto!</string>
    <string name="detail_park">No haz escogido algún detalle sobre tu estacionamiento!</string>
</resources>
