<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade"
    tools:context="eci.cosw.edu.sharepark.RegisterActivity"
    android:weightSum="1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/parking_icon"
        android:id="@+id/imageView2"
        android:layout_weight="0.27" />

    <TextView
        android:text="@string/registra_tus_datos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_weight="0.20" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cedula"
        android:inputType="number"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:ems="10"
        android:id="@+id/id"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:inputType="number"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:ems="10"
        android:id="@+id/phone"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:ems="10"
        android:id="@+id/address"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electronico"
        android:inputType="text"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:ems="10"
        android:id="@+id/email"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="@color/grey"
        android:textSize="20dp"
        android:ems="10"
        android:id="@+id/password"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:text="@string/agregar_metodo_de_pago_ahora"
        android:layout_width="300dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:id="@+id/agregarPago"
        android:background="@color/darkorange"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_weight="0.13" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="31dp">

    </LinearLayout>

    <Button
        android:text="@string/registrar"
        android:layout_width="146dp"
        android:layout_gravity="end"
        android:layout_height="wrap_content"
        android:id="@+id/registrarUsuario"
        android:background="@color/darkBlue"
        android:textColor="@color/white"
        android:textSize="25dp" />

    <Button
        android:text="@string/volver"
        android:layout_width="244dp"
        android:layout_height="30dp"
        android:id="@+id/volver"
        android:background="@color/white"
        android:textColor="@color/darkBlue"
        android:textSize="15dp"/>

</LinearLayout>