<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_parking_request"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eci.cosw.edu.sharepark.ParkingRequestActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/parking_request_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textStyle="bold"/>

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:columnCount="3"
                android:rowCount="9"
                >

                <TextView
                    android:text="@string/textview6_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:id="@+id/textView6"
                    android:layout_column="0"
                    android:layout_row="0"/>


                <TextView
                    android:text="@string/textview7_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:layout_row="2"/>

                <TextView
                    android:text="@string/textview8_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:id="@+id/textView8"
                    android:layout_column="0"
                    android:layout_row="3"/>

                <TextView
                    android:text="@string/textview9_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:id="@+id/textView9"
                    android:layout_column="0"
                    android:layout_row="4"/>
                <TextView
                    android:text="@string/textview10_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:id="@+id/textView10"
                    android:layout_column="0"
                    android:layout_row="5"/>

                <TextView
                    android:text="@string/textview11_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="28dp"
                    android:layout_marginStart="28dp"
                    android:id="@+id/textView11"
                    android:layout_column="0"
                    android:layout_row="6"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button3_text"
                    android:id="@+id/button3"
                    android:layout_row="8"
                    android:layout_column="0" />

                <Button
                    android:text="@string/button6_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button6"
                    android:layout_row="8"
                    android:layout_column="2"
                    />


            </GridLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
